force-app/main/default/objects/Medicaments__c/Medicaments__c.object-meta.xml
<CustomObject>
    <description>Object représentant les médicaments</description>
    <label>Medicament</label>
    <nameField>
        <label>Medicaments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>