force-app/main/default/objects/Medicaments__c/fields/DateDePeremption__c.field-meta.xml
<CustomField>
    <fullName>DateDePeremption__c</fullName>
    <description>Date après laquelle le médicament ne doit pas être utilisé</description>
    <label>DateDePeremption</label>
    <type>Date</type>
</CustomField>