force-app/main/default/objects/Medicaments__c/fields/NombreEnStock__c.field-meta.xml
<CustomField>
    <fullName>NombreEnStock__c</fullName>
    <description>Quantité actuelle du médicament en stock</description>
    <label>NombreEnStock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>