force-app/main/default/objects/Medicaments__c/fields/PrixPublic__c.field-meta.xml
<CustomField>
    <fullName>PrixPublic__c</fullName>
    <description>Prix de vente au public</description>
    <label>PrixPublic</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>