force-app/main/default/objects/Medicaments__c/fields/QuantiteDeContenu__c.field-meta.xml
<CustomField>
    <fullName>QuantiteDeContenu__c</fullName>
    <description>Quantité totale du médicament dans l&apos;emballage</description>
    <label>QuantiteDeContenu</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>